# GameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ToDoList.txt  main.cpp
GameEngine/: CMakeLists.txt
GameEngine/ScriptCore/: Actor.lua  Component.lua  DataType.lua  GameEngineDebugger.lua  Input.lua  KeyCode.lua
GameEngine/assets/shader/quad/: quad.fs
GameEngine/debug/Timer/: Timer.cpp  Timer.h
GameEngine/include/Actor/: Actor.h
GameEngine/include/Component/: Component.h
GameEngine/include/Core/: Assert.h  Camera.h  CameraController.h  FSM.h  GELib.h  GameBase.h  GameEngineCore.h  GameObject.h  Platform.h  Timestep.h  TypeName.hpp  UUID.h
GameEngine/include/Event/: Event.h  EventDispatcher.h  Input.h  KeyCode.h  KeyDownEvent.h  KeyUpEvent.h  MouseCode.h  PhysicsEvent.h
GameEngine/include/GameEngineAPI/: ConsoleApi.h  GameEngineAPI.h
GameEngine/include/Math/: Math.h
GameEngine/include/Opengl/: FrameBuffer.h  IndexBuffer.h  ShaderManager.h  SubTexture.h  Texture.h  TextureManager.h  VertexArray.h  VertexBufferLayout.h
GameEngine/include/Physics/: ActorData.h  ContactListener.h
GameEngine/include/Render/: Graphics.h  Renderer.h
GameEngine/include/Scene/: Scene.h  SceneSerializer.h
GameEngine/include/Script/: Character.h  ClassMap.h  ScriptCore.h  ScriptEngine.h  ScriptEngineMacro.h  ScriptInstance.h  ScriptInterface.h  ScriptInterfaceImplement.h  ScriptRegister.h
GameEngine/include/Script/Event/: KeyDownEvent.h  KeyUpEvent.h  ScriptEvent.h  ScriptEventDispatcher.h
GameEngine/src/Actor/: Actor.cpp
GameEngine/src/Component/: Component.cpp
GameEngine/src/Core/: Camera.cpp  CameraController.cpp  GELib.cpp  GameBase.cpp  GameObject.cpp  Timestep.cpp  UUID.cpp
GameEngine/src/Event/: EventDispatcher.cpp  Input.cpp  KeyDownEvent.cpp  KeyUpEvent.cpp  PhysicsEvent.cpp
GameEngine/src/GameEngineAPI/: ConsoleApi.cpp  GameEngineAPI.cpp
GameEngine/src/Math/: Math.cpp
GameEngine/src/Opengl/: FrameBuffer.cpp  IndexBuffer.cpp  Shader.cpp  ShaderManager.cpp  SubTexture.cpp  Texture.cpp  TextureManager.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
GameEngine/src/Physics/: ActorData.cpp  ContactListener.cpp
GameEngine/src/Render/: Renderer.cpp
GameEngine/src/Scene/: Scene.cpp  SceneGraph.cpp  SceneSerializer.cpp
GameEngine/src/Script/: Character.cpp  ScriptCore.cpp  ScriptEngine.cpp  ScriptEventDispatcher.cpp  ScriptInstance.cpp  ScriptInterfaceImplement.cpp  ScriptRegister.cpp
GameEngine/src/Script/Event/: KeyDownEvent.cpp  KeyUpEvent.cpp  ScriptEventDispatcher.cpp
GameEngineEditor/: CMakeLists.txt
GameEngineEditor/include/: BuildManager.h  Editor.h  EditorCamera.h  EditorColor.h  ImGuiLayer.h
GameEngineEditor/include/Event/: OpenProjectEvent.h
GameEngineEditor/include/Panel/: ImContentBrowserPanel.h  ImPropertiesPanel.h  ImSceneHierarchyPanel.h  ImTerminal.h
GameEngineEditor/src/: BuildManager.cpp  ImGuiLayer.cpp  ProjectParser.cpp  SDLFileParser.cpp
GameEngineEditor/src/Event/: ImTreeNodeClickEvent.cpp  OpenProjectEvent.cpp  SaveProjectEvent.cpp
GameEngineEditor/src/Panel/: ImContentBrowserPanel.cpp  ImDebugger.cpp  ImPropertiesPanel.cpp
GameLauncher/: CMakeLists.txt  Makefile  entryPoint.cpp
GameLauncher/include/: GameLauncher.h
GameLauncher/src/: GameLauncher.cpp
ImGui/: CMakeLists.txt
TestGame/: CMakeCache.txt  CMakeLists.txt  TestGame.gproject  imgui.ini
TestGame/assets/default/: defaultRect.asset
TestGame/assets/scene/: TestGame.map
TestGame/content/default/: defaultRect.asset
TestGame/resource/: CMakeLists.txt
TestGame/source/: Test.lua  entrypoint.cpp  imgui.ini
TestGame/source/TestGame/: Bird.cpp  Bird.h  TestActor.cpp  TestActor.h  TestGame.cpp  TestGame.h
backup/editor/: CMakeLists.txt  convert_ui.bat  editor_ui.h  editor_ui.ui  mainwindow.cpp
gameEngineEditor/: CMakeLists.txt  editorEntryPoint.cpp  mainwidow_rc.py  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  mainwindow_rc.py  mainwindow_ui.py  ui_mainwindow.py
gameEngineEditor/include/: AssetFileWidget.h  BuildManager.h  ComponentBrowserWidget.h  Editor.h  EditorCamera.h  EditorColor.h  EditorOpenGLWidget.h  EditorScene.h  ImGuiLayer.h  ImTerminal.h  JsonParser.h  MainWindowExportData.h  OutlineTreeWidget.h  OutlineTreeWidgetItem.h  ProjectParser.h  SDLFileParser.h  SDL_Editor_Window.h  SDL_Editor_Window_Wrapper.h  Titlebar.h  WordWrapLabel.h
gameEngineEditor/include/Event/: ImTreeNodeClickEvent.h  SaveProjectEvent.h
gameEngineEditor/include/Panel/: ImCameraPreview.h  ImContentBrowserPanel.h  ImDebugger.h  ImPropertiesPanel.h  ImSceneHierarchy.h
gameEngineEditor/include/Platform/Windows/: WindowsApi.h
gameEngineEditor/include/runtime/SDL/: SDLFileParser.h
gameEngineEditor/include/runtime/compile/: CompileProcess.h
gameEngineEditor/plugins/: LineEditFloat.cpp  LineEditFloat.h  LineEditInt.cpp  LineEditInt.h  QCollapsibleWidget.cpp  QCollapsibleWidget.h
gameEngineEditor/qss/: gameEngineEditor_ui.qss
gameEngineEditor/src/: AdvancedComboBox.cpp  AssetFileWidget.cpp  ComponentBrowserWidget.cpp  ContentBrowserPanel.cpp  Editor.cpp  EditorCamera.cpp  EditorOpenGLWidget.cpp  EditorScene.cpp  ImGuiLayer.cpp  ImTerminal.cpp  JsonParser.cpp  LineEditRotation.cpp  OutlineTreeWidget.cpp  OutlineTreeWidgetItem.cpp  ProjectParser.cpp  QCollapsibleWidget.cpp  SDL_Editor_Window.cpp  SDL_Editor_Window_Wrapper.cpp  Titlebar.cpp  WordWrapLabel.cpp
gameEngineEditor/src/Panel/: ImCameraPreview.cpp  ImDebugger.cpp  ImPropertiesPanel.cpp  ImSceneHierarchy.cpp  ImSceneHierarchyPanel.cpp  ImTerminal.cpp
gameEngineEditor/src/platform/Windows/: WindowsApi.cpp
gameEngineEditor/src/runtime/SDL/: SDLFileParser.cpp
test/: CMakeLists.txt  Food.cpp  Food.h  Grid.cpp  Grid.h  MainCharacter.cpp  MainCharacter.h  Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h  SnakeGame.cpp  SnakeGame.h  Test.gproject  TestGame.cpp  TestGame.h  TestVector.cpp  test.py
test/content/default/: defaultRect.asset
test/content/scene/: Test.map
test/source/: entrypoint.cpp
test/source/Test/: TestGame.cpp  TestGame.h
test/src/: Vector.h
(+471 files in other folders)
